--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "node-sass": "^4.3.0",
     "postcss": "^6.0.11",
     "postcss-loader": "^2.0.6",
