--- a/requirements - Copy.txt
+++ b/requirements - Copy.txt
@@ -11,9 +11,13 @@ billiard==3.5.0.3         # via celery
 boto3==1.4.7
 botocore==1.7.14          # via boto3, s3transfer
 braintree==3.37.2         # via django-payments
+#BROKEN cairocffi==0.8.0          # via cairosvg, weasyprint
+cairosvg==1.0.22
 celery[redis]==4.1.0
 certifi==2017.7.27.1      # via requests
+cffi==1.10.0              # via cairocffi, cryptography, weasyprint
 chardet==3.0.4            # via requests
+cryptography==2.0.3       # via django-payments
 cssselect2==0.2.1         # via weasyprint
 defusedxml==0.5.0         # via python3-openid, social-auth-core
 dj-database-url==0.4.2
@@ -24,7 +28,6 @@ django-cache-url==1.3.1
 django-celery-results==1.0.1
 django-countries==4.6.1
 django-filter==1.0.4
-django-impersonate==1.1
 django-mptt==0.8.7
 django-payments==0.12.1
 django-prices-openexchangerates==0.1.15
@@ -68,6 +71,7 @@ promise==2.0.2            # via graphene, graphql-core, graphql-relay
 psycopg2==2.7.3.1
 purl==1.3.1
 py==1.4.34                # via pytest
+pycparser==2.18           # via cffi
 pyjwt==1.5.3              # via django-payments, social-auth-core
 pyphen==0.9.4             # via weasyprint
 pytest-django==3.1.2
@@ -90,6 +94,8 @@ text-unidecode==1.0
 tinycss2==0.6.1           # via cssselect2, weasyprint
 typing==3.6.2             # via promise
 urllib3==1.22             # via elasticsearch, requests
+#BROKEN WINDOWS uwsgi==2.0.15
 vine==1.1.4               # via amqp
+weasyprint==0.41
 webencodings==0.5.1       # via html5lib, tinycss2
 xmltodict==0.11.0         # via django-payments
